@@ -3613,237 +3613,12 @@ name|KeeperException
 throws|,
 name|InterruptedException
 block|{
-name|ClusterState
-name|clusterState
-init|=
-name|zkStateReader
-operator|.
-name|getClusterState
-argument_list|()
-decl_stmt|;
-name|Set
-argument_list|<
-name|String
-argument_list|>
-name|collections
-init|=
-name|clusterState
-operator|.
-name|getCollections
-argument_list|()
-decl_stmt|;
-name|Set
-argument_list|<
-name|String
-argument_list|>
-name|updatedCoreNodeNames
-init|=
-operator|new
-name|HashSet
-argument_list|<>
-argument_list|()
-decl_stmt|;
-for|for
-control|(
-name|String
-name|collectionName
-range|:
-name|collections
-control|)
-block|{
-name|DocCollection
-name|collection
-init|=
-name|clusterState
-operator|.
-name|getCollection
+name|publishNodeAsDown
 argument_list|(
-name|collectionName
-argument_list|)
-decl_stmt|;
-name|Collection
-argument_list|<
-name|Slice
-argument_list|>
-name|slices
-init|=
-name|collection
-operator|.
-name|getSlices
-argument_list|()
-decl_stmt|;
-for|for
-control|(
-name|Slice
-name|slice
-range|:
-name|slices
-control|)
-block|{
-name|Collection
-argument_list|<
-name|Replica
-argument_list|>
-name|replicas
-init|=
-name|slice
-operator|.
-name|getReplicas
-argument_list|()
-decl_stmt|;
-for|for
-control|(
-name|Replica
-name|replica
-range|:
-name|replicas
-control|)
-block|{
-if|if
-condition|(
 name|getNodeName
-argument_list|()
-operator|.
-name|equals
-argument_list|(
-name|replica
-operator|.
-name|getNodeName
-argument_list|()
-argument_list|)
-operator|&&
-name|replica
-operator|.
-name|getState
-argument_list|()
-operator|!=
-name|Replica
-operator|.
-name|State
-operator|.
-name|DOWN
-condition|)
-block|{
-name|ZkNodeProps
-name|m
-init|=
-operator|new
-name|ZkNodeProps
-argument_list|(
-name|Overseer
-operator|.
-name|QUEUE_OPERATION
-argument_list|,
-literal|"state"
-argument_list|,
-name|ZkStateReader
-operator|.
-name|STATE_PROP
-argument_list|,
-name|Replica
-operator|.
-name|State
-operator|.
-name|DOWN
-operator|.
-name|toString
-argument_list|()
-argument_list|,
-name|ZkStateReader
-operator|.
-name|BASE_URL_PROP
-argument_list|,
-name|getBaseUrl
-argument_list|()
-argument_list|,
-name|ZkStateReader
-operator|.
-name|CORE_NAME_PROP
-argument_list|,
-name|replica
-operator|.
-name|getStr
-argument_list|(
-name|ZkStateReader
-operator|.
-name|CORE_NAME_PROP
-argument_list|)
-argument_list|,
-name|ZkStateReader
-operator|.
-name|ROLES_PROP
-argument_list|,
-name|replica
-operator|.
-name|getStr
-argument_list|(
-name|ZkStateReader
-operator|.
-name|ROLES_PROP
-argument_list|)
-argument_list|,
-name|ZkStateReader
-operator|.
-name|NODE_NAME_PROP
-argument_list|,
-name|getNodeName
-argument_list|()
-argument_list|,
-name|ZkStateReader
-operator|.
-name|SHARD_ID_PROP
-argument_list|,
-name|replica
-operator|.
-name|getStr
-argument_list|(
-name|ZkStateReader
-operator|.
-name|SHARD_ID_PROP
-argument_list|)
-argument_list|,
-name|ZkStateReader
-operator|.
-name|COLLECTION_PROP
-argument_list|,
-name|collectionName
-argument_list|,
-name|ZkStateReader
-operator|.
-name|CORE_NODE_NAME_PROP
-argument_list|,
-name|replica
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-decl_stmt|;
-name|updatedCoreNodeNames
-operator|.
-name|add
-argument_list|(
-name|replica
-operator|.
-name|getName
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|overseerJobQueue
-operator|.
-name|offer
-argument_list|(
-name|Utils
-operator|.
-name|toJSON
-argument_list|(
-name|m
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-block|}
-block|}
 comment|// now wait till the updates are in our state
 name|long
 name|now
@@ -3874,7 +3649,26 @@ decl_stmt|;
 name|boolean
 name|foundStates
 init|=
-literal|false
+literal|true
+decl_stmt|;
+name|ClusterState
+name|clusterState
+init|=
+name|zkStateReader
+operator|.
+name|getClusterState
+argument_list|()
+decl_stmt|;
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|collections
+init|=
+name|clusterState
+operator|.
+name|getCollections
+argument_list|()
 decl_stmt|;
 while|while
 condition|(
@@ -3958,11 +3752,22 @@ control|)
 block|{
 if|if
 condition|(
+name|getNodeName
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|replica
+operator|.
+name|getNodeName
+argument_list|()
+argument_list|)
+operator|&&
 name|replica
 operator|.
 name|getState
 argument_list|()
-operator|==
+operator|!=
 name|Replica
 operator|.
 name|State
@@ -3970,15 +3775,9 @@ operator|.
 name|DOWN
 condition|)
 block|{
-name|updatedCoreNodeNames
-operator|.
-name|remove
-argument_list|(
-name|replica
-operator|.
-name|getName
-argument_list|()
-argument_list|)
+name|foundStates
+operator|=
+literal|false
 expr_stmt|;
 block|}
 block|}
@@ -3986,18 +3785,9 @@ block|}
 block|}
 if|if
 condition|(
-name|updatedCoreNodeNames
-operator|.
-name|size
-argument_list|()
-operator|==
-literal|0
+name|foundStates
 condition|)
 block|{
-name|foundStates
-operator|=
-literal|true
-expr_stmt|;
 name|Thread
 operator|.
 name|sleep
